--- a/docs/professor/antonio_cesar_godoy.mdx
+++ b/docs/professor/antonio_cesar_godoy.mdx
@@ -6,7 +6,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química Orgânica e Bioquímica dos Alimentos",
+          size: 2,
+          teachers: [
+            "Antonio Cesar Godoy"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "TAL2025"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -27,6 +41,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Química Orgânica e Bioquímica dos Alimentos",
+          size: 2,
+          teachers: [
+            "Antonio Cesar Godoy"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "TAL2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -39,7 +66,7 @@ export const data = {
           teachers: [
             "Antonio Cesar Godoy"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Química",
           students: [
             "AGO2024"
           ],
@@ -61,7 +88,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:05 - 15:55",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
