--- a/docs/professor/eliana_pelicon_pereira_figueira.mdx
+++ b/docs/professor/eliana_pelicon_pereira_figueira.mdx
@@ -15,7 +15,8 @@ export const data = {
           subject: "Biologia 4",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -28,7 +29,8 @@ export const data = {
           subject: "Biologia 1",
           size: 1,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -59,7 +61,8 @@ export const data = {
           subject: "Biologia I",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -72,7 +75,8 @@ export const data = {
           subject: "Biologia III",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -173,7 +177,8 @@ export const data = {
           subject: "Biologia III",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
