--- a/docs/professor/everaldo_lorensetti.mdx
+++ b/docs/professor/everaldo_lorensetti.mdx
@@ -21,9 +21,14 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "09:25 - 10:15",
+          time: "11:05 - 11:55",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
         {
           subject: "Sociologia II",
           size: 1,
@@ -38,10 +43,6 @@ export const data = {
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
