--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -1,47 +1,75 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Novo professor Automação",
+  title: "Gabriele Antico Freiria",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Acionamentos Elétricos (PPC2020)",
-          size: 4,
+          subject: "Biologia 4",
+          size: 2,
           teachers: [
-            "Novo professor Automação",
-            "Wylliam Salviano Gongora"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "Laboratório de Biologia",
           students: [
-            "ELE2024"
+            "EIN2022"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Biologia 1",
+          size: 1,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "EIN2025"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Manutenção Elétrica Industrial",
+          subject: "Biologia I",
           size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti",
-            "Novo professor Automação"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Laboratório de Biologia",
           students: [
-            "ELE2024"
+            "COM2025"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -54,18 +82,17 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Digitais",
-          size: 4,
+          subject: "Biologia III",
+          size: 2,
           teachers: [
-            "Jair Fajardo Junior",
-            "Novo professor Automação"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
-          classroom: "",
+          classroom: "Laboratório de Biologia",
           students: [
-            "ELE2025",
-            "ELM2025"
+            "COM2023"
           ],
-          time: "19:00 - 19:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -131,7 +158,7 @@ export const data = {
   ]
 }
 
-# Novo professor Automação
+# Gabriele Antico Freiria
 
 <div>
   {
