--- a/docs/professor/jael_dos_santos.mdx
+++ b/docs/professor/jael_dos_santos.mdx
@@ -32,6 +32,19 @@ export const data = {
           ],
           time: "11:05 - 11:55",
           color: ""
+        },
+        {
+          subject: "Política educacional: organização da educação brasileira",
+          size: 2,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_1"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
