--- a/docs/professor/jair_fajardo_junior.mdx
+++ b/docs/professor/jair_fajardo_junior.mdx
@@ -77,23 +77,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Sistemas Digitais",
-          size: 4,
-          teachers: [
-            "Jair Fajardo Junior",
-            "Novo professor Automação"
-          ],
-          classroom: "",
-          students: [
-            "ELE2025",
-            "ELM2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
