--- a/docs/professor/josiane_paula_maltauro.mdx
+++ b/docs/professor/josiane_paula_maltauro.mdx
@@ -6,21 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Artes I",
-          size: 2,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "15:05 - 15:55",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -62,6 +48,19 @@ export const data = {
             "IIW2024A"
           ],
           time: "11:05 - 11:55",
+          color: ""
+        },
+        {
+          subject: "Artes I",
+          size: 2,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
