--- a/docs/professor/suzane_conceicao_pantolfi_tostes.mdx
+++ b/docs/professor/suzane_conceicao_pantolfi_tostes.mdx
@@ -17,7 +17,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:05 - 15:55",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -49,20 +49,6 @@ export const data = {
             "AGO2024"
           ],
           time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Direitos e deveres da trabalhadora / Produção Vegetal / Cidadania e Gênero / Formação profissional e tecnológica",
-          size: 4,
-          teachers: [
-            "Fernanda da Silva Ferreira",
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "FAO2025-1"
-          ],
-          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -100,7 +86,22 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Direitos e deveres da trabalhadora / Produção Vegetal / Cidadania e Gênero / Formação profissional e tecnológica",
+          size: 4,
+          teachers: [
+            "Fernanda da Silva Ferreira",
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "FAO2025-1"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
