--- a/docs/professor/wylliam_salviano_gongora.mdx
+++ b/docs/professor/wylliam_salviano_gongora.mdx
@@ -6,22 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Acionamentos Elétricos (PPC2020)",
-          size: 4,
-          teachers: [
-            "Novo professor Automação",
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
