--- a/docs/sala/bloco_1/laboratorio_de_quimica.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_quimica.mdx
@@ -40,7 +40,7 @@ export const data = {
           subject: "Química Orgânica e Bioquímica dos Alimentos",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Antonio Cesar Godoy"
           ],
           classroom: "Laboratório de Química",
           students: [
@@ -128,7 +128,7 @@ export const data = {
           subject: "Química Orgânica e Bioquímica dos Alimentos",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Antonio Cesar Godoy"
           ],
           classroom: "Laboratório de Química",
           students: [
@@ -146,11 +146,11 @@ export const data = {
           subject: "Química II",
           size: 2,
           teachers: [
-            "Sabrina Kerkhoff"
+            "Antonio Cesar Godoy"
           ],
           classroom: "Laboratório de Química",
           students: [
-            "IIW2024A"
+            "AGO2024"
           ],
           time: "07:30 - 08:20",
           color: ""
@@ -196,7 +196,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:05 - 15:55",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
