--- a/docs/sala/bloco_2/sala_11-2.mdx
+++ b/docs/sala/bloco_2/sala_11-2.mdx
@@ -73,11 +73,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Manutenção Elétrica Industrial",
+          subject: "Conservação de Recursos Naturais (PPC2020)",
           size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti",
-            "Novo professor Automação"
+            "Danilo Hungaro Micheletti"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -87,10 +86,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Conservação de Recursos Naturais (PPC2020)",
+          subject: "Manutenção Elétrica Industrial",
           size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -165,7 +164,7 @@ export const data = {
           subject: "Lingua Estrangeira Moderna 2 - Ingles",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 11-2",
           students: [
