--- a/docs/sala/bloco_2/sala_12-2.mdx
+++ b/docs/sala/bloco_2/sala_12-2.mdx
@@ -40,26 +40,13 @@ export const data = {
           subject: "Língua Portuguesa e Literatura III",
           size: 1,
           teachers: [
-            "Pedro Leites Junior"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
           time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Horticultura",
-          size: 2,
-          teachers: [
-            "Fernanda da Silva Ferreira"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -72,7 +59,20 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:05 - 15:55",
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Horticultura",
+          size: 2,
+          teachers: [
+            "Fernanda da Silva Ferreira"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "14:00 - 14:50",
           color: ""
         },
         {
@@ -108,10 +108,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura III",
+          subject: "Culturas II",
           size: 1,
           teachers: [
-            "Pedro Leites Junior"
+            "Diego Armando Amaro da Silva"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -240,10 +240,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Culturas II",
+          subject: "Língua Portuguesa e Literatura III",
           size: 1,
           teachers: [
-            "Diego Armando Amaro da Silva"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -275,7 +275,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "13:10 - 14:00",
+          time: "15:05 - 15:55",
           color: ""
         },
         {
