--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -37,10 +37,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia II",
+          subject: "Produção Animal I",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Leiliane Cristine de Souza"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -53,7 +53,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -210,16 +210,16 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química II",
-          size: 2,
+          subject: "Filosofia II",
+          size: 1,
           teachers: [
-            "Antonio Cesar Godoy"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -232,20 +232,7 @@ export const data = {
           students: [
             "AGO2024"
           ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Produção Animal I",
-          size: 1,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
