--- a/docs/sala/bloco_2/sala_15-2.mdx
+++ b/docs/sala/bloco_2/sala_15-2.mdx
@@ -58,7 +58,7 @@ export const data = {
           subject: "Lingua Estrangeira Moderna 1 - Inglês",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 15-2",
           students: [
