--- a/docs/sala/bloco_2/sala_16-2.mdx
+++ b/docs/sala/bloco_2/sala_16-2.mdx
@@ -14,7 +14,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -182,6 +182,19 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "História II",
           size: 1,
           teachers: [
@@ -242,7 +255,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 16-2",
           students: [
