--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -40,26 +40,13 @@ export const data = {
           subject: "Língua Portuguesa e Literatura III",
           size: 1,
           teachers: [
-            "Pedro Leites Junior"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
           time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Horticultura",
-          size: 2,
-          teachers: [
-            "Fernanda da Silva Ferreira"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -72,7 +59,20 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:05 - 15:55",
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Horticultura",
+          size: 2,
+          teachers: [
+            "Fernanda da Silva Ferreira"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "14:00 - 14:50",
           color: ""
         }
       ]
@@ -108,10 +108,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura III",
+          subject: "Culturas II",
           size: 1,
           teachers: [
-            "Pedro Leites Junior"
+            "Diego Armando Amaro da Silva"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -181,7 +181,8 @@ export const data = {
           subject: "Biologia III",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -266,10 +267,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Culturas II",
+          subject: "Língua Portuguesa e Literatura III",
           size: 1,
           teachers: [
-            "Diego Armando Amaro da Silva"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -292,12 +293,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia e Extensão Rural",
+          subject: "Química III",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Antonio Cesar Godoy"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Química",
           students: [
             "AGO2023"
           ],
@@ -305,12 +306,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química III",
+          subject: "Sociologia e Extensão Rural",
           size: 2,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Elias Franco"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
