--- a/docs/turma/com/com2023.mdx
+++ b/docs/turma/com/com2023.mdx
@@ -268,7 +268,8 @@ export const data = {
           subject: "Biologia III",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
