--- a/docs/turma/com/com2025.mdx
+++ b/docs/turma/com/com2025.mdx
@@ -156,7 +156,8 @@ export const data = {
           subject: "Biologia I",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
