--- a/docs/turma/ein/ein2022.mdx
+++ b/docs/turma/ein/ein2022.mdx
@@ -72,7 +72,8 @@ export const data = {
           subject: "Biologia 4",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
