--- a/docs/turma/ein/ein2023.mdx
+++ b/docs/turma/ein/ein2023.mdx
@@ -205,7 +205,7 @@ export const data = {
           subject: "Lingua Estrangeira Moderna 2 - Ingles",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 11-2",
           students: [
