--- a/docs/turma/ele/ele2024.mdx
+++ b/docs/turma/ele/ele2024.mdx
@@ -14,8 +14,7 @@ export const data = {
           subject: "Acionamentos Elétricos (PPC2020)",
           size: 4,
           teachers: [
-            "Novo professor Automação",
-            "Wylliam Salviano Gongora"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
           classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
           students: [
@@ -48,11 +47,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Manutenção Elétrica Industrial",
+          subject: "Conservação de Recursos Naturais (PPC2020)",
           size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti",
-            "Novo professor Automação"
+            "Danilo Hungaro Micheletti"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -62,10 +60,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Conservação de Recursos Naturais (PPC2020)",
+          subject: "Manutenção Elétrica Industrial",
           size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
           classroom: "Sala 11-2",
           students: [
