--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -58,7 +58,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 5",
           students: [
@@ -68,29 +68,17 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia II",
-          size: 1,
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
           teachers: [
-            "Everaldo Lorensetti"
+            "Álvaro José de Almeida Araújo",
+            "Samuel Stephan Milczuk"
           ],
-          classroom: "Sala 5",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2023A"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Filosofia III",
-          size: 1,
-          teachers: [
-            "José Provetti Júnior"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -164,17 +152,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
+          subject: "Filosofia III",
+          size: 1,
           teachers: [
-            "Álvaro José de Almeida Araújo",
-            "Samuel Stephan Milczuk"
+            "José Provetti Júnior"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Sala 5",
           students: [
             "IIW2023A"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
