--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -14,7 +14,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -200,7 +200,7 @@ export const data = {
           teachers: [
             "Sabrina Kerkhoff"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
@@ -269,7 +269,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 16-2",
           students: [
