--- a/docs/turma/iiw/iiw2025a.mdx
+++ b/docs/turma/iiw/iiw2025a.mdx
@@ -50,10 +50,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lingua estrangeira - Inglês",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -95,12 +95,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          subject: "Lingua estrangeira - Inglês",
           size: 2,
           teachers: [
-            "Álvaro José de Almeida Araújo"
+            "Andrey Felipe Martins"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Sala 9-2",
           students: [
             "IIW2025A"
           ],
@@ -155,7 +155,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -178,12 +178,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "IIW2025A"
           ],
@@ -253,19 +253,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lógica de programação",
-          size: 2,
-          teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: [
-            "IIW2025A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Sociologia I",
           size: 1,
           teachers: [
@@ -275,7 +262,20 @@ export const data = {
           students: [
             "IIW2025A"
           ],
-          time: "11:05 - 11:55",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Lógica de programação",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "IIW2025A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
