--- a/docs/turma/tal/tal2025.mdx
+++ b/docs/turma/tal/tal2025.mdx
@@ -27,7 +27,7 @@ export const data = {
           subject: "Química Orgânica e Bioquímica dos Alimentos",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Antonio Cesar Godoy"
           ],
           classroom: "Laboratório de Química",
           students: [
@@ -76,7 +76,7 @@ export const data = {
           subject: "Química Orgânica e Bioquímica dos Alimentos",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Antonio Cesar Godoy"
           ],
           classroom: "Laboratório de Química",
           students: [
