--- a/docs/professor/andrey_felipe_martins.mdx
+++ b/docs/professor/andrey_felipe_martins.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Yohana Diel Saheli",
+  title: "Andrey Felipe Martins",
   base: "",
   weekClasses: [
     {
@@ -11,7 +11,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -21,45 +21,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lingua estrangeira - Inglês",
-          size: 2,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2025A"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "Língua Portuguesa e Literatura III",
-          size: 2,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Lingua Estrangeira Moderna 1 - Inglês",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
-          classroom: "Sala 15-2",
+          classroom: "Sala 12-2",
           students: [
-            "EIN2024"
+            "AGO2023"
           ],
           time: "11:05 - 11:55",
           color: ""
@@ -68,7 +37,7 @@ export const data = {
           subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -80,12 +49,84 @@ export const data = {
       ]
     },
     {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
+          teachers: [
+            "Andrey Felipe Martins"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Lingua estrangeira - Inglês",
+          size: 2,
+          teachers: [
+            "Andrey Felipe Martins"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Lingua Estrangeira Moderna 1 - Inglês",
+          size: 1,
+          teachers: [
+            "Andrey Felipe Martins"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "EIN2024"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
+        }
+      ]
+    },
+    {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Andrey Felipe Martins"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Andrey Felipe Martins"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -94,7 +135,7 @@ export const data = {
           subject: "Lingua Estrangeira Moderna 2 - Ingles",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 11-2",
           students: [
@@ -104,10 +145,23 @@ export const data = {
           color: ""
         },
         {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 1,
+          teachers: [
+            "Andrey Felipe Martins"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -179,7 +233,7 @@ export const data = {
   ]
 }
 
-# Yohana Diel Saheli
+# Andrey Felipe Martins
 
 <div>
   {
