--- a/docs/professor/fernanda_da_silva_ferreira.mdx
+++ b/docs/professor/fernanda_da_silva_ferreira.mdx
@@ -44,7 +44,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "13:10 - 14:00",
+          time: "14:00 - 14:50",
           color: ""
         }
       ]
@@ -53,11 +53,25 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Direitos e deveres da trabalhadora / Produção Vegetal / Cidadania e Gênero / Formação profissional e tecnológica",
+          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
+          size: 2,
+          teachers: [
+            "Fernanda da Silva Ferreira"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Inclusão digital / Processamento de Produtos Vegetal / Produção Vegetal",
           size: 4,
           teachers: [
+            "Elias Franco",
             "Fernanda da Silva Ferreira",
-            "Suzane Conceição Pantolfi Tostes"
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -103,8 +117,8 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
-          size: 2,
+          subject: "Educação Postural e Segurança no Trabalho",
+          size: 1,
           teachers: [
             "Fernanda da Silva Ferreira"
           ],
@@ -112,7 +126,7 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -125,16 +139,15 @@ export const data = {
           students: [
             "AGO2024"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
-          subject: "Inclusão digital / Processamento de Produtos Vegetal / Produção Vegetal",
+          subject: "Direitos e deveres da trabalhadora / Produção Vegetal / Cidadania e Gênero / Formação profissional e tecnológica",
           size: 4,
           teachers: [
-            "Elias Franco",
             "Fernanda da Silva Ferreira",
-            "José Jurandir Pereira Junior"
+            "Suzane Conceição Pantolfi Tostes"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -147,21 +160,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Educação Postural e Segurança no Trabalho",
-          size: 1,
-          teachers: [
-            "Fernanda da Silva Ferreira"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
