--- a/docs/professor/katia_cristiane_kobus_novaes.mdx
+++ b/docs/professor/katia_cristiane_kobus_novaes.mdx
@@ -19,6 +19,32 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
         }
       ]
     },
