--- a/docs/professor/mario_eduardo_de_barros_gomes_nunes_da_silva.mdx
+++ b/docs/professor/mario_eduardo_de_barros_gomes_nunes_da_silva.mdx
@@ -1,34 +1,21 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Lechan Colares Santos",
+  title: "Mario Eduardo de Barros Gomes Nunes da Silva",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Gestão de Materiais e Logística",
-          size: 2,
+          subject: "Acionamentos Elétricos (PPC2020)",
+          size: 4,
           teachers: [
-            "Lechan Colares Santos"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
           students: [
-            "COM2023"
-          ],
-          time: "15:05 - 15:55",
-          color: ""
-        },
-        {
-          subject: "Logística aplicada",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "TGC2024"
+            "ELE2024"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -37,38 +24,25 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão de compras e estoque",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Logística aplicada",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Manutenção Elétrica Industrial",
+          size: 2,
+          teachers: [
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -76,7 +50,22 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Sistemas Digitais",
+          size: 4,
+          teachers: [
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
+          ],
+          classroom: "",
+          students: [
+            "ELE2025",
+            "ELM2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
@@ -139,7 +128,7 @@ export const data = {
   ]
 }
 
-# Lechan Colares Santos
+# Mario Eduardo de Barros Gomes Nunes da Silva
 
 <div>
   {
