--- a/docs/sala/bloco_1/sala_5.mdx
+++ b/docs/sala/bloco_1/sala_5.mdx
@@ -58,39 +58,13 @@ export const data = {
           subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 5",
           students: [
             "IIW2023A"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Sociologia II",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "IIW2023A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Filosofia III",
-          size: 1,
-          teachers: [
-            "José Provetti Júnior"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -135,6 +109,32 @@ export const data = {
             "IIW2023A"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Filosofia III",
+          size: 1,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
