--- a/docs/sala/bloco_2/sala_8-2.mdx
+++ b/docs/sala/bloco_2/sala_8-2.mdx
@@ -24,16 +24,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Artes I",
+          subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 8-2",
           students: [
             "AGO2025"
           ],
           time: "15:05 - 15:55",
+          color: ""
+        },
+        {
+          subject: "Política educacional: organização da educação brasileira",
+          size: 2,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_1"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -42,10 +55,10 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -68,10 +81,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Estrangeira - Inglês",
+          subject: "Artes I",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -183,10 +196,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Fernanda da Silva Ferreira"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -196,10 +209,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia I",
+          subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -227,10 +240,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Postural e Segurança no Trabalho",
+          subject: "Filosofia I",
           size: 1,
           teachers: [
-            "Fernanda da Silva Ferreira"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -253,19 +266,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Olavo Henrique Vieira Veiga"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Agricultura Geral",
           size: 2,
           teachers: [
@@ -275,7 +275,20 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Olavo Henrique Vieira Veiga"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
