--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -24,10 +24,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lingua estrangeira - Inglês",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -55,6 +55,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Lingua estrangeira - Inglês",
+          size: 2,
+          teachers: [
+            "Andrey Felipe Martins"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "Filosofia I",
           size: 1,
           teachers: [
@@ -76,7 +89,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -96,19 +109,6 @@ export const data = {
             "IIW2025A"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2025A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -157,7 +157,7 @@ export const data = {
           students: [
             "IIW2025A"
           ],
-          time: "11:05 - 11:55",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
