--- a/docs/sala/bloco_4/laboratorio_de_maquinas_e_acionamentos_eletricos_b4.mdx
+++ b/docs/sala/bloco_4/laboratorio_de_maquinas_e_acionamentos_eletricos_b4.mdx
@@ -14,8 +14,7 @@ export const data = {
           subject: "Acionamentos Elétricos (PPC2020)",
           size: 4,
           teachers: [
-            "Novo professor Automação",
-            "Wylliam Salviano Gongora"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
           classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
           students: [
