--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -37,10 +37,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia II",
+          subject: "Produção Animal I",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Leiliane Cristine de Souza"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -66,7 +66,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -176,11 +176,24 @@ export const data = {
           teachers: [
             "Antonio Cesar Godoy"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Química",
           students: [
             "AGO2024"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Filosofia II",
+          size: 1,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -193,20 +206,7 @@ export const data = {
           students: [
             "AGO2024"
           ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Produção Animal I",
-          size: 1,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
