--- a/docs/turma/ago/ago2025.mdx
+++ b/docs/turma/ago/ago2025.mdx
@@ -91,10 +91,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Artes I",
+          subject: "Língua Estrangeira - Inglês",
           size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -109,10 +109,10 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -161,10 +161,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Estrangeira - Inglês",
+          subject: "Artes I",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -224,10 +224,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Fernanda da Silva Ferreira"
+            "Andrey Felipe Martins"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -237,10 +237,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia I",
+          subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -268,10 +268,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Postural e Segurança no Trabalho",
+          subject: "Filosofia I",
           size: 1,
           teachers: [
-            "Fernanda da Silva Ferreira"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -294,19 +294,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Olavo Henrique Vieira Veiga"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "AGO2025"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Agricultura Geral",
           size: 2,
           teachers: [
@@ -316,7 +303,20 @@ export const data = {
           students: [
             "AGO2025"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Olavo Henrique Vieira Veiga"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "AGO2025"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
