--- a/docs/turma/ein/ein2025.mdx
+++ b/docs/turma/ein/ein2025.mdx
@@ -98,7 +98,8 @@ export const data = {
           subject: "Biologia 1",
           size: 1,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
