--- a/docs/turma/ele/ele2025.mdx
+++ b/docs/turma/ele/ele2025.mdx
@@ -102,8 +102,7 @@ export const data = {
           subject: "Sistemas Digitais",
           size: 4,
           teachers: [
-            "Jair Fajardo Junior",
-            "Novo professor Automação"
+            "Mario Eduardo de Barros Gomes Nunes da Silva"
           ],
           classroom: "",
           students: [
