Simone de Miranda

--- a/docs/sala/bloco_2/sala_15-2.mdx
+++ b/docs/sala/bloco_2/sala_15-2.mdx
@@ -116,7 +116,7 @@ export const data = {
           subject: "Artes 2",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 15-2",
           students: [
