--- a/docs/sala/bloco_2/sala_6-2.mdx
+++ b/docs/sala/bloco_2/sala_6-2.mdx
@@ -129,7 +129,7 @@ export const data = {
           subject: "Artes 1",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 6-2",
           students: [
