--- a/docs/sala/bloco_4/sala_1-4.mdx
+++ b/docs/sala/bloco_4/sala_1-4.mdx
@@ -91,7 +91,7 @@ export const data = {
           subject: "Artes 3",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 1-4",
           students: [
