--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -111,7 +111,7 @@ export const data = {
           subject: "Arte I",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -168,7 +168,7 @@ export const data = {
           subject: "Arte I",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 16-2",
           students: [
