--- a/docs/professor/simone_de_miranda.mdx
+++ b/docs/professor/simone_de_miranda.mdx
@@ -1,10 +1,10 @@
 ---
-description: Josiane Paula Maltauro
+description: Simone de Miranda
 ---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Josiane Paula Maltauro",
+  title: "Simone de Miranda",
   base: "",
   weekClasses: [
     {
@@ -15,29 +15,29 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Artes II",
-          size: 2,
+          subject: "Arte I",
+          size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Sala 16-2",
           students: [
-            "AGO2024"
+            "IIW2024A"
           ],
-          time: "07:30 - 08:20",
+          time: "11:05 - 11:55",
           color: ""
         },
         {
-          subject: "Arte",
-          size: 1,
+          subject: "Artes I",
+          size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 8-2",
           students: [
-            "COM2023"
+            "AGO2025"
           ],
-          time: "09:25 - 10:15",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -46,52 +46,62 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Arte",
+          subject: "Artes 1",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 6-2",
           students: [
-            "COM2023"
+            "EIN2025"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Artes 2",
+          size: 1,
+          teachers: [
+            "Simone de Miranda"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "EIN2024"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Arte I",
+          size: 1,
+          teachers: [
+            "Simone de Miranda"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Artes 3",
+          size: 1,
+          teachers: [
+            "Simone de Miranda"
+          ],
+          classroom: "Sala 1-4",
+          students: [
+            "EIN2022"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Arte I",
-          size: 2,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Metodologias Ativas",
-          size: 2,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Josiane Paula Maltauro",
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Indefinido",
-          students: [
-            "EGE2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -156,10 +166,17 @@ export const data = {
       size: 50
     }
   ],
-  alert: ""
+  alert: "Sem e-mail cadastrado"
 }
 
-# Josiane Paula Maltauro
+# Simone de Miranda
+
+:::warning
+
+Sem e-mail cadastrado
+
+:::
+
 
 <div>
   {
