--- a/docs/sala/bloco_2/sala_16-2.mdx
+++ b/docs/sala/bloco_2/sala_16-2.mdx
@@ -85,7 +85,7 @@ export const data = {
           subject: "Arte I",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -142,7 +142,7 @@ export const data = {
           subject: "Arte I",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 16-2",
           students: [
