--- a/docs/turma/ein/ein2024.mdx
+++ b/docs/turma/ein/ein2024.mdx
@@ -130,7 +130,7 @@ export const data = {
           subject: "Artes 2",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 15-2",
           students: [
