--- a/docs/turma/ein/ein2025.mdx
+++ b/docs/turma/ein/ein2025.mdx
@@ -118,7 +118,7 @@ export const data = {
           subject: "Artes 1",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Simone de Miranda"
           ],
           classroom: "Sala 6-2",
           students: [
