Ajustes de cadastro

--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
@@ -38,7 +38,7 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Projeto integrador I",
+          subject: "Projeto Integrador I",
           size: 2,
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
