--- a/docs/turma/iiw/iiw2025b.mdx
+++ b/docs/turma/iiw/iiw2025b.mdx
@@ -65,7 +65,7 @@ export const data = {
         },
         {
           subject: "Sociologia I",
-          size: 1,
+          size: 2,
           teachers: [
             "Fabio Antônio da Silva"
           ],
@@ -74,19 +74,6 @@ export const data = {
             "IIW2025B"
           ],
           time: "15:05 - 15:55",
-          color: ""
-        },
-        {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "15:55 - 16:45",
           color: ""
         }
       ]
@@ -235,7 +222,7 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Projeto integrador I",
+          subject: "Projeto Integrador I",
           size: 2,
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
